Update frontend and remove API key